<resources>
    <string name="app_name">Controle de Campeonatos</string>

    <string name="titulo_cadastro">Cadastro de Usuário</string>
    <string name="hint_nome">Nome completo</string>
    <string name="hint_nickname">Nickname (apelido)</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="texto_botao_salvar">Salvar Cadastro</string>
    <string name="formato_data_partida">Data: %1$s</string>
    <string name="item_partida_label_data">Data:</string>
    <string name="item_partida_placeholder_jogador1">Jogador 1</string>
    <string name="item_partida_placeholder_jogador2">Jogador 2</string>
    <string name="item_partida_placeholder_placar">0 x 0</string>
    <string name="item_voltar_ao_meu_principal">Voltar ao meu principal</string>"
    <string name="item_adicionar_novo_usuario">Adicionar novo usuário</string>"

</resources>